refactor login page

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -185,15 +185,13 @@ body {
 }
 .login-common{
   .rounded-corners;
-  .auto-center-layout;
-  .text-center;
+
 }
 
 .dialog{
   .login-common;
-  .padding-20;
   form{
-    .text-left;
+
     color:#0A0A0A;
 
   }
@@ -202,9 +200,7 @@ body {
 }
 .tip{
   .login-common;
-  margin-bottom: 10px;
-  height: 40px;
-  padding: 10px 40px 1px 40px;
+  min-height: 40px;
   display: block;
 }
 
@@ -213,7 +209,7 @@ body {
   .login-common;
   padding: 10px 40px 1px 40px;
   margin-top: 10px;
-  height: 40px;
+  min-height: 40px;
   color: #0A0A0A;
 
   .background-image;
