--- a/app/views/users/_tip.jade
+++ b/app/views/users/_tip.jade
@@ -1,4 +1,5 @@
-div(id='tip',class='tip')
+div(id='tip',class='col-md-offset-2 col-md-8 tip')
+
 
 <!-- Templates -->
 script(type="text/template",id="item-template")
