--- a/app/views/layouts/review-layout.jade
+++ b/app/views/layouts/review-layout.jade
@@ -1,8 +1,8 @@
-doctype 5
+doctype
 html(lang='en')
     head
         block head
-            title= title
+            title #{title}
 
             include _meta
             include _css
