change some home page css

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -96,10 +96,27 @@ body {
 .ie9-tip{
   margin-top:50px;
 }
+
+.border-content{
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  border-color: #e1e1e8;
+  /**
+
+  -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);**/
+
+}
 .content-div{
-  min-height:200px;
-  padding-top:30px;
+  min-height:500px;
+  padding-top:15px;
   .rounded-corners;
+
+
   /**
   border: 1px solid #CCC;
 
@@ -137,7 +154,7 @@ body {
 }
 
 .new-member{
-  margin-top:30px;
+  margin-top:15px;
 }
 
 .face-thumbnails{
