--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -11626,9 +11626,22 @@ body {
 .ie9-tip {
   margin-top: 50px;
 }
+.border-content {
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  border-color: #e1e1e8;
+  /**
+
+  -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);**/
+}
 .content-div {
-  min-height: 200px;
-  padding-top: 30px;
+  min-height: 500px;
+  padding-top: 15px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -11636,7 +11649,6 @@ body {
   border: 1px solid #CCC;
 
   box-shadow: 0 0 2px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.1);**/
-
 }
 .icon-margin-top {
   margin-top: 3px;
@@ -11670,7 +11682,7 @@ body {
   text-align: center;
 }
 .new-member {
-  margin-top: 30px;
+  margin-top: 15px;
 }
 .face-thumbnails {
   width: 40px;
