change home page css and add sue

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -37,6 +37,15 @@
 .margin-top20{
   margin-top: 20px;
 }
+.padding-top5{
+  padding-top: 5px;
+}
+.padding-top10{
+  padding-top: 10px;
+}
+.padding-top15{
+  padding-top: 15px;
+}
 .padding-top20{
   padding-top: 20px;
 }
@@ -96,6 +105,7 @@ body {
 .ie9-tip{
   margin-top:50px;
 }
+
 
 .border-content{
   margin-bottom: 20px;
