--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -25,6 +25,15 @@
 .margin-top20 {
   margin-top: 20px;
 }
+.padding-top5 {
+  padding-top: 5px;
+}
+.padding-top10 {
+  padding-top: 10px;
+}
+.padding-top15 {
+  padding-top: 15px;
+}
 .padding-top20 {
   padding-top: 20px;
 }
