--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -11585,6 +11585,15 @@ disabled look for disabled choices in the results dropdown
 .margin-top20 {
   margin-top: 20px;
 }
+.padding-top5 {
+  padding-top: 5px;
+}
+.padding-top10 {
+  padding-top: 10px;
+}
+.padding-top15 {
+  padding-top: 15px;
+}
 .padding-top20 {
   padding-top: 20px;
 }
