add top 7 days and new member

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -75,6 +75,11 @@
   filter:Alpha(opacity=20);
 }
 
+.clipse{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 
 /**all page css**/
 
@@ -106,6 +111,10 @@ body {
   margin-top:50px;
 }
 
+.small-face{
+  width: 40px;
+  height: 40px;
+}
 
 .border-content{
   margin-bottom: 20px;
