change home page top

--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -41,12 +41,12 @@ script(type="text/template",id="item-template")
     div.row
         div.col-md-12
             div.pull-left
-                p.marketing-byline
+                p.text-muted.small
                     | • <%- looked %> 次浏览
 
 
             div.pull-right
-                p.marketing-byline
+                p.text-muted.small
                     <%- creator.name %> 发表于 <%- fromNow %>
 
     hr.soft
