--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -31,6 +31,7 @@
 
 /**utilies css for other**/
 .word-break-wrap{
+  word-wrap: break-word;
   word-break: break-all;
 }
 
@@ -75,10 +76,11 @@
   filter:Alpha(opacity=20);
 }
 
-.clipse{
+.ellipsis{
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  -o-text-overflow:ellipsis;/*兼容opera*/
 }
 
 /**all page css**/
@@ -116,6 +118,11 @@ body {
   height: 40px;
 }
 
+.li-width{
+  width: 100%;
+  word-break: break-all;
+}
+
 .border-content{
   margin-bottom: 20px;
   background-color: #ffffff;
@@ -141,44 +148,10 @@ body {
 
   box-shadow: 0 0 2px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.1);**/
 }
-.icon-margin-top{
-  margin-top: 3px;
-}
-.up-down-cover{
-  position: absolute;
-  text-align: center;
-  color: #cc0000;
-}
 
-.marketing-byline{
-  .grey-font;
-}
-
-.rank-author-line{
-  margin-bottom: 5px;
-}
-
-.rank-author{
-  padding-top: 10px;
-}
-.relative{
-  margin-top:0px;
-  padding:2px 10px 10px 10px;
-  padding-left:10px;
-  background-color: #f7f5fa;
-  h4{
-    .text-center
-  }
-  .rounded-corners
-}
 
 .new-member{
   margin-top:15px;
-}
-
-.face-thumbnails{
-  width: 40px;
-  height: 40px;
 }
 
 .blog-content{
