--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -20,6 +20,7 @@
 }
 /**utilies css for other**/
 .word-break-wrap {
+  word-wrap: break-word;
   word-break: break-all;
 }
 .margin-top20 {
@@ -50,10 +51,13 @@
   background: rgba(255, 255, 255, 0.2) none repeat scroll 0 0 !important;
   filter: alpha(opacity=20);
 }
-.clipse {
+.ellipsis {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  /*兼容opera*/
+
 }
 /**all page css**/
 .min-container {
@@ -84,6 +88,10 @@ body {
   width: 40px;
   height: 40px;
 }
+.li-width {
+  width: 100%;
+  word-break: break-all;
+}
 .border-content {
   margin-bottom: 20px;
   background-color: #ffffff;
@@ -110,43 +118,8 @@ body {
   box-shadow: 0 0 2px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.1);**/
 
 }
-.icon-margin-top {
-  margin-top: 3px;
-}
-.up-down-cover {
-  position: absolute;
-  text-align: center;
-  color: #cc0000;
-}
-.marketing-byline {
-  color: #999999;
-  font-size: 12px;
-  font-weight: 300;
-}
-.rank-author-line {
-  margin-bottom: 5px;
-}
-.rank-author {
-  padding-top: 10px;
-}
-.relative {
-  margin-top: 0px;
-  padding: 2px 10px 10px 10px;
-  padding-left: 10px;
-  background-color: #f7f5fa;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-}
-.relative h4 {
-  text-align: center;
-}
 .new-member {
   margin-top: 15px;
-}
-.face-thumbnails {
-  width: 40px;
-  height: 40px;
 }
 .blog-content a {
   color: #000000;
