changed h1-h5 font to microsoft yahei

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -5,7 +5,7 @@
 @min-height:500px;
 @z-index:10000;
 
-@global-font-family:"Microsoft YaHei","微软雅黑",Tahoma, Arial,"Helvetica Neue", Helvetica,sans-serif,"宋体",;
+@global-font-family:"Microsoft YaHei","微软雅黑",Tahoma, Arial,"Helvetica Neue", Helvetica,sans-serif,"宋体";
 @global-font-size: 14px;
 
 @max-width:80%;
