--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -481,7 +481,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft YaHei","微软雅黑",Tahoma, Arial,"Helvetica Neue", Helvetica,sans-serif,"宋体";
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
