--- a/app/views/talk/chat.jade
+++ b/app/views/talk/chat.jade
@@ -13,7 +13,7 @@ block content
          p please input your nickname and press enter:
          input(id='nick',type='text')
 
-    div(id='messages', class='row-fluid')
+    div(id='messages', class='row')
 
         div(class='t3 padding20 auto-line online-user')
            h3 On Line
@@ -21,7 +21,7 @@ block content
         div(class='t9 chat-message padding20',id='lines')
 
 
-    div.container
+    div.row
        form(class='well form-inline center',id='send-message')
          div.control-group
            div.controls
